fix: UI: Project header box squished on linux http://bugs.activestate.com/show_bug.cgi?id=100020
(integrated from komodo (trunk) change 81448 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13456 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -42,13 +42,12 @@ splitter
  * Komodo window.
  */
 
-splitter
+splitter.workspace_splitter
 {
     &[orient="vertical"]
     {
         -moz-appearance: none;
         min-height: 3px;
-        height: 3px;
         border: none;
         z-index: 100;
         position: relative;
@@ -66,7 +65,6 @@ splitter
     {
         -moz-appearance: none;
         min-width: 3px;
-        width: 3px;
         border: none;
 
         &:not(.workspace_splitter_right)
